MDL-55635 message: ciBot fixes squash create notifications page

--- a/theme/bootstrapbase/less/moodle/popover_region.less
+++ b/theme/bootstrapbase/less/moodle/popover_region.less
@@ -255,7 +255,6 @@
                 display: inline-block;
                 width: 24px;
                 height: 24px;
-                vertical-align: top;
                 float: left;
 
                 img {
